fix: wonky code sizes on mobile safari

--- a/src/components/Code/index.module.scss
+++ b/src/components/Code/index.module.scss
@@ -22,6 +22,7 @@ $curve: cubic-bezier(.165, .84, .44, 1);
 }
 
 .code {
+  -webkit-text-size-adjust: 100%;
   padding: calc(var(--base) * 2);
   font-size: calc(var(--base) * .75);
   letter-spacing: .04em;
